k8s/openserp-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: openserp
  labels:
    app.kubernetes.io/name: openserp
