k8s/service-web.yaml
apiVersion: v1
kind: Service
metadata:
  name: jobfit-web
  namespace: jobfit
spec:
  type: LoadBalancer
  selector:
    app: jobfit-web
  ports:
    - port: 7860
      targetPort: 7860
